# featdiag

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: midus_example.py
featdiag/: __init__.py  core.py  metrics.py  plot.py  rules.py
featdiag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py
